step39/step02/ingress-jaeger.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jager
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: jager.wuchenyangzhendehaoshuai.com
      http:
        paths:
          - backend:
              service:
                name: jaeger
                port:
                  number: 16686
            path: /
            pathType: ImplementationSpecific
